--- a/.erdconfig
+++ b/.erdconfig
@@ -1,18 +1,18 @@
+title: 'レジュメ標準化計画'
+exclude: 'ApplicationRecord, ActiveRecord::SchemaMigration, ActiveRecord::InternalMetadata, ProjectConductLink, ProjectEmploymentLink, ProjectTechnologyLink'
 attributes:
   - inheritance
 disconnected: true
 filename: db/erd
 filetype: pdf
-indirect: false
-inheritance: true
+indirect: true
+inheritance: false
 markup: false
-notation: bachman
+notation: crowsfoot
 orientation: vertical
 polymorphism: true
-sort: true
+sort: false
 warn: true
-title: 'レジュメ標準化計画'
-exclude: 'ApplicationRecord, ActiveRecord::SchemaMigration, ActiveRecord::InternalMetadata'
 only: null
 only_recursion_depth: null
 prepend_primary: false
