--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Setup Ruby version
-      uses: actions/setup-ruby@master
+      uses: actions/setup-ruby@v1
       with:
-        version: 2.6
+        version: 2.6.3
     - name: Install dependent libralies
       # run: sudo apt-get install libmysqlclient-dev
       run: sudo apt-get install libpq-dev
